--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://dasbabs.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://www.istartedtocode.com
+title: A blog about my journey to learn coding
+subtitle: 
+author: Babs
 simple_search: https://www.google.com/search
 description:
 
@@ -16,7 +16,7 @@ description:
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: /atom.xml
+subscribe_rss: /istartedtocode.github.io/atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
 email:
@@ -26,10 +26,10 @@ email:
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /
+root: http://istartedtocode.com/istartedtocode.github.io
 permalink: /blog/:year/:month/:day/:title/
 source: source
-destination: public
+destination: public/istartedtocode.github.io
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
@@ -63,7 +63,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: dasbabs
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -97,4 +97,4 @@ disqus_show_comment_count: false
 google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
