--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ email:
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: http://istartedtocode.com/istartedtocode.github.io
+root: /istartedtocode.github.io
 permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public/istartedtocode.github.io
